syntax = "proto3";
package kava.evmutil.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "kava/evmutil/v1beta1/genesis.proto";

option go_package = "github.com/kava-labs/kava/x/evmutil/types";
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;

// Query defines the gRPC querier service for evmutil module
service Query {
  // Params queries all parameters of the evmutil module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/kava/evmutil/v1beta1/params";
  }

  // DeployedCosmosCoinContracts queries a list cosmos coin denom and their deployed erc20 address
  rpc DeployedCosmosCoinContracts(QueryDeployedCosmosCoinContractsRequest) returns (QueryDeployedCosmosCoinContractsResponse) {
    option (google.api.http).get = "/kava/evmutil/v1beta1/deployed_cosmos_coin_contracts";
  }
}

// QueryParamsRequest defines the request type for querying x/evmutil parameters.
message QueryParamsRequest {}

// QueryParamsResponse defines the response type for querying x/evmutil parameters.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryDeployedCosmosCoinContractsRequest defines the request type for Query/DeployedCosmosCoinContracts method.
message QueryDeployedCosmosCoinContractsRequest {
  // optional query param to only return specific denoms in the list
  repeated string cosmos_denoms = 1;
}

// QueryDeployedCosmosCoinContractsResponse defines the response type for the Query/DeployedCosmosCoinContracts method.
message QueryDeployedCosmosCoinContractsResponse {
  // deployed_cosmos_coin_contracts is a list of cosmos-sdk coin denom and its deployed contract address
  repeated DeployedCosmosCoinContract deployed_cosmos_coin_contracts = 1 [(gogoproto.nullable) = false];
}

// DeployedCosmosCoinContract defines a deployed token contract to the evm representing a native cosmos-sdk coin
message DeployedCosmosCoinContract {
  string cosmos_denom = 1;
  string address = 2 [(gogoproto.customtype) = "InternalEVMAddress"];
}
